change content of files to match current project

--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 
-<h1>Welcome to the To Do List!</h1>
-<a href='/items/new'>Add a new item</a>
-<a href='/items'>See list of items</a>
+<h1>Welcome to Pierre's Vendor and Order Tracker!</h1>
+<a href='/vendors/new'>Add a new vendor</a>
+<a href='/vendors'>See list of vendors</a>
