--- a/VendorAndOrderTracker/Views/Orders/Show.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/Show.cshtml
@@ -1,7 +1,7 @@
-<h1>To Do List Item Details: </h1>
+<h1>To Do List Order Details: </h1>
 
-<h2>@Model["item"].Description</h2>
-<h3>Category: @Model["category"].Name</h3>
+<h2>@Model["order"].Description</h2>
+<h3>Vendor: @Model["vendor"].Name</h3>
 
-<a href='/categories/@Model["category"].Id/items/new'>Add another item</a>
-<a href='/categories'>View all categories</a>
+<a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
+<a href='/vendors'>View all vendors</a>
