tweak input description and order details display

--- a/VendorAndOrderTracker/Views/Orders/Show.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/Show.cshtml
@@ -1,7 +1,10 @@
-<h1>To Do List Order Details: </h1>
+<h1>Order Details: </h1>
 
-<h2>@Model["order"].Description</h2>
 <h3>Vendor: @Model["vendor"].Name</h3>
+<h2>Order Number: @Model["order"].Title</h2>
+<h2>Description: @Model["order"].Description</h2>
+<h2>Price: $@Model["order"].Price</h2>
+<h2>Date: @Model["order"].Date</h2>
 
 <a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
 <a href='/vendors'>View all vendors</a>
