--- a/VendorAndOrderTracker/Views/Orders/New.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/New.cshtml
@@ -3,7 +3,7 @@
 <div class="form-group">
   <form action="/vendors/@Model.Id/orders" method="post">
     <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-    <label for="orderTitle">Order Title</label>
+    <label for="orderTitle">Order Number</label>
     <input id="orderTitle" name="orderTitle" type="text">
     <label for="orderDescription">Order Description</label>
     <input id="orderDescription" name="orderDescription" type="text">
