add _Layout styling to all cshtml pages

--- a/VendorAndOrderTracker/Views/Shared/_Layout.cshtml
+++ b/VendorAndOrderTracker/Views/Shared/_Layout.cshtml
@@ -10,8 +10,9 @@
 </head>
 
 <body>
-  @RenderBody()
-  @Html.Partial("Footer")
+  <div class="container">
+    @RenderBody()
+  </div>
 </body>
 
 </html>
