--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -5,6 +5,5 @@
 
 <h1>Welcome to Pierre's Vendor and Order Tracker!</h1>
 
-<a href='/vendors/new'>Add a new vendor</a>
-<br>
-<a href='/vendors'>See list of vendors</a>
+<p><a href='/vendors/new'>Add a new vendor</a></p>
+<p><a href='/vendors'>See list of vendors</a></p>
