--- a/VendorAndOrderTracker/Views/Orders/Show.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/Show.cshtml
@@ -4,11 +4,21 @@
 
 <h1>Order Details: </h1>
 
-<h3>Vendor: @Model["vendor"].Name</h3>
 <h2>Order Number: @Model["order"].Title</h2>
-<h2>Description: @Model["order"].Description</h2>
-<h2>Price: $@Model["order"].Price</h2>
-<h2>Date: @Model["order"].Date</h2>
+<ul>
+  <li>
+    <h3>Description: @Model["order"].Description</h3>
+  </li>
+  <li>
+    <h3>Price: $@Model["order"].Price</h3>
+  </li>
+  <li>
+    <h3>Date: @Model["order"].Date</h3>
+  </li>
+  <li>
+    <h3>Vendor: <a href='/vendors/@Model["vendor"].Id'>@Model["vendor"].Name</a></h3>
+  </li>
+</ul>
 
-<a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a>
-<a href='/vendors'>View all vendors</a>
+<p><a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a></p>
+<p><a href='/vendors'>View all vendors</a></p>
