add some bootstrap styling

--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 
-<h1>Welcome to Pierre's Vendor and Order Tracker!</h1>
+<h1 class="jumbotron">Welcome to Pierre's Vendor and Order Tracker!</h1>
 
 <p><a href='/vendors/new'>Add a new vendor</a></p>
 <p><a href='/vendors'>See list of vendors</a></p>
