--- a/VendorAndOrderTracker/Views/Orders/New.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/New.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-<h1>Add a new order to @Model.Name</h1>
+<h1 class="jumbotron">Add a new order to @Model.Name</h1>
 
 <div class="form-group">
   <form action="/vendors/@Model.Id/orders" method="post">
