--- a/VendorAndOrderTracker/Views/Orders/Show.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/Show.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-<h1>Order Details: </h1>
+<h1 class="jumbotron">Order Details: </h1>
 
 <h2>Order Number: @Model["order"].Title</h2>
 <ul>
