--- a/VendorAndOrderTracker/wwwroot/css/styles.css
+++ b/VendorAndOrderTracker/wwwroot/css/styles.css
@@ -1,9 +1,3 @@
-/* div#footer {
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  width: 100%;
-  color: #ccc;
-  background: #333;
-  padding: 8px;
-} */
+.card {
+  width: 50%;
+}
