--- a/VendorAndOrderTracker/Views/Orders/New.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/New.cshtml
@@ -4,17 +4,23 @@
 
 <h1 class="jumbotron">Add a new order to @Model.Name</h1>
 
-<div class="form-group">
-  <form action="/vendors/@Model.Id/orders" method="post">
-    <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+<form action="/vendors/@Model.Id/orders" method="post">
+  <input class="form-control" id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+  <div class="form-group">
     <label for="orderTitle">Order Number</label>
-    <input id="orderTitle" name="orderTitle" type="text">
+    <input class="form-control" id="orderTitle" name="orderTitle" type="text">
+  </div>
+  <div class="form-group">
     <label for="orderDescription">Order Description</label>
-    <input id="orderDescription" name="orderDescription" type="text">
+    <input class="form-control" id="orderDescription" name="orderDescription" type="text">
+  </div>
+  <div class="form-group">
     <label for="orderPrice">Order Price</label>
-    <input id="orderPrice" name="orderPrice" type="number">
+    <input class="form-control" id="orderPrice" name="orderPrice" type="number">
+  </div>
+  <div class=form-group>
     <label for="orderDate">Order Date</label>
-    <input id="orderDate" name="orderDate" type="date">
-    <button type='submit'>Add order</button>
-  </form>
-</div>
+    <input class="form-control" id="orderDate" name="orderDate" type="date">
+  </div>
+  <button type="submit" class="btn btn-primary">Add order</button>
+</form>
