--- a/VendorAndOrderTracker/Views/Home/Index.cshtml
+++ b/VendorAndOrderTracker/Views/Home/Index.cshtml
@@ -1,9 +1,22 @@
-@{
-  Layout = "_Layout";
-}
+<!DOCTYPE html>
+<html lang="en-US">
 
+<head>
+  <meta charset="utf-8">
+  <title>Pierre's Vendor and Order Tracker</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="VendorAndOrderTracker.Solution/VendorAndOrderTracker/wwwroot/css/styles.css">
+</head>
 
-<h1 class="jumbotron">Welcome to Pierre's Vendor and Order Tracker!</h1>
+<body>
+  <div class="container">
+    <h1 class="jumbotron">Welcome to Pierre's Vendor and Order Tracker!</h1>
 
-<p><a href='/vendors/new'>Add a new vendor</a></p>
-<p><a href='/vendors'>See list of vendors</a></p>
+    <p><a href='/vendors/new'>Add a new vendor</a></p>
+    <p><a href='/vendors'>See list of vendors</a></p>
+
+  </div>
+</body>
+
+</html>
