--- a/VendorAndOrderTracker/Views/Orders/DeleteAll.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/DeleteAll.cshtml
@@ -1,6 +1,19 @@
-@{
-  Layout = "_Layout";
-}
+<!DOCTYPE html>
+<html lang="en-US">
 
-<h1>Your list has been cleared!</h1>
-<p><a href="/orders">Back to list.</a></p>
+<head>
+  <meta charset="utf-8">
+  <title>Pierre's Vendor and Order Tracker</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="VendorAndOrderTracker.Solution/VendorAndOrderTracker/wwwroot/css/styles.css">
+</head>
+
+<body>
+  <div class="container">
+    <h1>Your list has been cleared!</h1>
+    <p><a href="/orders">Back to list.</a></p>
+  </div>
+</body>
+
+</html>
