--- a/VendorAndOrderTracker/Views/Orders/Show.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/Show.cshtml
@@ -1,31 +1,45 @@
-@{
-  Layout = "_Layout";
-}
+<!DOCTYPE html>
+<html lang="en-US">
 
-<h1 class="jumbotron">Order Details: </h1>
+<head>
+  <meta charset="utf-8">
+  <title>Pierre's Vendor and Order Tracker</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="VendorAndOrderTracker.Solution/VendorAndOrderTracker/wwwroot/css/styles.css">
+</head>
 
-<div class="row">
-  <div class="col-6">
-    <div class="card">
-      <div class="card-body">
-        <h2 class="card-title">Order Number: @Model["order"].Title</h2>
-        <ul class="card-text">
-          <li>
-            <h3>Description: @Model["order"].Description</h3>
-          </li>
-          <li>
-            <h3>Price: $@Model["order"].Price</h3>
-          </li>
-          <li>
-            <h3>Date: @Model["order"].Date</h3>
-          </li>
-          <li>
-            <h3>Vendor: <a href='/vendors/@Model["vendor"].Id'>@Model["vendor"].Name</a></h3>
-          </li>
-        </ul>
+<body>
+  <div class="container">
+    <h1 class="jumbotron">Order Details: </h1>
+
+    <div class="row">
+      <div class="col-6">
+        <div class="card">
+          <div class="card-body">
+            <h2 class="card-title">Order Number: @Model["order"].Title</h2>
+            <ul class="card-text">
+              <li>
+                <h3>Description: @Model["order"].Description</h3>
+              </li>
+              <li>
+                <h3>Price: $@Model["order"].Price</h3>
+              </li>
+              <li>
+                <h3>Date: @Model["order"].Date</h3>
+              </li>
+              <li>
+                <h3>Vendor: <a href='/vendors/@Model["vendor"].Id'>@Model["vendor"].Name</a></h3>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
+    <p><a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a></p>
+    <p><a href='/vendors'>View all vendors</a></p>
+
   </div>
-</div>
-<p><a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a></p>
-<p><a href='/vendors'>View all vendors</a></p>
+</body>
+
+</html>
