--- a/VendorAndOrderTracker/Views/Orders/New.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/New.cshtml
@@ -6,33 +6,35 @@
   <title>Pierre's Vendor and Order Tracker</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="VendorAndOrderTracker.Solution/VendorAndOrderTracker/wwwroot/css/styles.css">
+  <link href="~/css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
   <div class="container">
     <h1 class="jumbotron">Add a new order to @Model.Name</h1>
 
-    <form action="/vendors/@Model.Id/orders" method="post">
-      <input class="form-control" id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-      <div class="form-group">
-        <label for="orderTitle">Order Number</label>
-        <input class="form-control" id="orderTitle" name="orderTitle" type="text">
-      </div>
-      <div class="form-group">
-        <label for="orderDescription">Order Description</label>
-        <input class="form-control" id="orderDescription" name="orderDescription" type="text">
-      </div>
-      <div class="form-group">
-        <label for="orderPrice">Order Price</label>
-        <input class="form-control" id="orderPrice" name="orderPrice" type="number">
-      </div>
-      <div class=form-group>
-        <label for="orderDate">Order Date</label>
-        <input class="form-control" id="orderDate" name="orderDate" type="date">
-      </div>
-      <button type="submit" class="btn btn-primary">Add order</button>
-    </form>
+    <div class="text">
+      <form action="/vendors/@Model.Id/orders" method="post">
+        <input class="form-control" id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
+        <div class="form-group">
+          <label for="orderTitle">Order Number</label>
+          <input class="form-control" id="orderTitle" name="orderTitle" type="text">
+        </div>
+        <div class="form-group">
+          <label for="orderDescription">Order Description</label>
+          <input class="form-control" id="orderDescription" name="orderDescription" type="text">
+        </div>
+        <div class="form-group">
+          <label for="orderPrice">Order Price</label>
+          <input class="form-control" id="orderPrice" name="orderPrice" type="number">
+        </div>
+        <div class=form-group>
+          <label for="orderDate">Order Date</label>
+          <input class="form-control" id="orderDate" name="orderDate" type="date">
+        </div>
+        <button type="submit" class="btn btn-primary">Add order</button>
+      </form>
+    </div>
 
   </div>
 </body>
