--- a/VendorAndOrderTracker/Views/Orders/Show.cshtml
+++ b/VendorAndOrderTracker/Views/Orders/Show.cshtml
@@ -6,7 +6,7 @@
   <title>Pierre's Vendor and Order Tracker</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="VendorAndOrderTracker.Solution/VendorAndOrderTracker/wwwroot/css/styles.css">
+  <link href="~/css/styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
     <div class="row">
       <div class="col-6">
-        <div class="card">
+        <div class="card text">
           <div class="card-body">
             <h2 class="card-title">Order Number: @Model["order"].Title</h2>
             <ul class="card-text">
@@ -36,8 +36,8 @@
         </div>
       </div>
     </div>
-    <p><a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a></p>
-    <p><a href='/vendors'>View all vendors</a></p>
+    <h5><a href='/vendors/@Model["vendor"].Id/orders/new'>Add another order</a></p>
+      <h5><a href='/vendors'>View all vendors</a></p>
 
   </div>
 </body>
