--- a/VendorAndOrderTracker/wwwroot/css/styles.css
+++ b/VendorAndOrderTracker/wwwroot/css/styles.css
@@ -1,3 +1,16 @@
 body {
   background-image: url("../img/bread.jpg");
+  background-size: cover;
+  background-color: black;
+}
+
+.jumbotron {
+  color: white;
+  background-color: rgba(139, 139, 125, 0.5);
+}
+
+.text {
+  background-color: rgba(255, 255, 255, 0.85);
+  width: max-content;
+  padding: 5%;
 }
